src/objects/Apttus_Config2__BillingPlanItem__c.object
<CustomObject>
    <description>Represents a billing entry in a billing plan.</description>
    <fields>
        <fullName>Apttus_Config2__Amount__c</fullName>
        <description>The billing amount</description>
        <inlineHelpText>The billing amount</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingPlanId__c</fullName>
        <description>ID of the associated billing plan</description>
        <inlineHelpText>ID of the associated billing plan</inlineHelpText>
        <label>Billing Plan</label>
        <referenceTo>Apttus_Config2__BillingPlan__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingRule__c</fullName>
        <description>The billing rule associated with the plan item</description>
        <inlineHelpText>The billing rule associated with the plan item</inlineHelpText>
        <label>Billing Rule (Deprecated)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bill In Advance</fullName>
                </value>
                <value>
                    <fullName>Bill In Arrears</fullName>
                </value>
                <value>
                    <fullName>Milestone Billing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__FixedBillingDate__c</fullName>
        <description>The fixed billing date</description>
        <inlineHelpText>The fixed billing date</inlineHelpText>
        <label>Fixed Billing Date (Deprecated)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MilestoneId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the milestone associated with the plan item</description>
        <inlineHelpText>ID of the milestone associated with the plan item</inlineHelpText>
        <label>Milestone</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Apttus_Config2__BillingPlanId__c</field>
                <operation>equals</operation>
                <valueField>Apttus_Config2__Milestone2__c.Apttus_Config2__BillingPlanId__c</valueField>
            </filterItems>
            <infoMessage>Please choose a milestone to associate with the billing plan item</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Apttus_Config2__Milestone2__c</referenceTo>
        <relationshipLabel>Billing Plan Items</relationshipLabel>
        <relationshipName>BillingPlanItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PaymentTermId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the payment term associated with the plan item</description>
        <inlineHelpText>ID of the payment term associated with the plan item</inlineHelpText>
        <label>Payment Term</label>
        <referenceTo>Apttus_Config2__PaymentTerm__c</referenceTo>
        <relationshipLabel>Billing Plan Items</relationshipLabel>
        <relationshipName>BillingPlanItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Percent__c</fullName>
        <description>The billing amount expressed as a percentage</description>
        <inlineHelpText>The billing amount expressed as a percentage</inlineHelpText>
        <label>Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PeriodEndDate__c</fullName>
        <description>The billing plan item end date</description>
        <inlineHelpText>The billing plan item end date</inlineHelpText>
        <label>Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PeriodStartDate__c</fullName>
        <description>The billing plan item start date</description>
        <inlineHelpText>The billing plan item start date</inlineHelpText>
        <label>Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PlanItemName__c</fullName>
        <description>The plan item name</description>
        <inlineHelpText>The plan item name</inlineHelpText>
        <label>Plan Item Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ReadyForInvoiceDate__c</fullName>
        <description>The date when the plan is ready for generating an invoice</description>
        <inlineHelpText>The date when the plan is ready for generating an invoice</inlineHelpText>
        <label>Ready For Invoice Date</label>
        <type>Date</type>
    </fields>
    <label>Billing Plan Item</label>
    <nameField>
        <displayFormat>BI-{00000000}</displayFormat>
        <label>Item Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Plan Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>